Font size change

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             - get value
             - set style
     -->
+    <label for="font-size-selector">Select font size:</label>
+    <input type="range" name="font-size-selector" id="font-size-selector" min="10" max="32" step="2">
+    <button type="submit" id="submit-font-size-button">Submit font size</button>
 </body>
 <script src="script.js"></script>
 </html>
